tests/pos/i4430.scala
object Test {
  def main(args: Array[String]): Unit = {
    val sb = new java.lang.StringBuilder()
    sb.append(Array[Char](), 0, 0)
    sb.length
  }
}
