tests/neg/parsing-overly-long-1.scala
object Fuzz { // nopos-error
val arr:Array[String]= Array.ofDim[String](10)
val list:Array[Int]= List.range(0,arr.length).toList.toArray.toList.toArray.toList.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray.toArray
}
